--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- NAVBAR -->
     <nav>
         <div class="main">
-            <a>Visinp</a>
+            <a>Andraaa</a>
         </div>
 
         <div class="menu">
@@ -68,3 +68,4 @@
 
 </body>
 </html>
+
