--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </section>
 
     <!-- SECTION: ABOUT -->
-    <section id="about" style="background: #cfcfcf;">
+    <section id="about" style="background: #5c6dd6;">
         <h1>Tentang Saya</h1>
         <p>Saya adalah pecinta olahraga dan penggiat gym yang selalu mengejar perkembangan diri. Bagi saya, kekuatan fisik dan kreativitas berjalan beriringan—keduanya membantu saya membangun versi terbaik dari diri sendiri, baik di dunia nyata maupun dalam ruang imajinasi.</p>
     </section>
@@ -49,7 +49,7 @@
     </section>
 
     <!-- SECTION: PROJECTS -->
-    <section id="projects" style="background: #fcfcfc;">
+    <section id="projects" style="background: #5c6dd6;">
         <div class="teks">
             <h1>Projects</h1>
             <p>Daftar project yang pernah dibuat.</p>
