--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </section>
 
     <!-- SECTION: ABOUT -->
-    <section id="about" style="background: #5c6dd6;">
+    <section id="about" style="background: red;">
         <h1>Tentang Saya</h1>
         <p>Saya adalah pecinta olahraga dan penggiat gym yang selalu mengejar perkembangan diri. Bagi saya, kekuatan fisik dan kreativitas berjalan beriringan—keduanya membantu saya membangun versi terbaik dari diri sendiri, baik di dunia nyata maupun dalam ruang imajinasi.</p>
     </section>
@@ -49,7 +49,7 @@
     </section>
 
     <!-- SECTION: PROJECTS -->
-    <section id="projects" style="background: #5c6dd6;">
+    <section id="projects" style="background: red;">
         <div class="teks">
             <h1>Projects</h1>
             <p>Daftar project yang pernah dibuat.</p>
@@ -59,7 +59,18 @@
             <img src="img/p.jpg" alt="Foto Proyek">
             <a>Project Log In</a>
         </div>
-        
+        <div class="project2">
+            <img src="img/p2.jpg" alt="Foto Proyek">
+            <a>Project 3D Sederhana</a>
+        </div>
+        <div class="project3">
+            <img src="img/p3.jpg" alt="Foto Proyek">
+            <a>Project Gundam</a>
+        </div>
+        <div class="project4">
+            <img src="img/p4.jpg" alt="Foto Proyek">
+            <a>Project Muka Kodok</a>
+        </div>
     </section>
 
     <!-- FOOTER -->
